--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,9 +30,52 @@ body {
   position: relative;
 }
 
+
+
+
 .left {
-  background: rgba(101, 143, 47, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
+
+/* .option {
+  width: fit-content;
+  height: auto;
+} */
+
+
+ul {
+  list-style-type: none;
+}
+
+
+.option-container {
+  height:100%
+}
+
+
+
+
+.option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20%;
+  margin-bottom: 1px;
+  background-color: #f1f1f1;
+  border: none;
+  border-radius: 1px;
+  padding: 1px 1px;
+  cursor: pointer;
+}
+
+
+
+
+
+
 
 .top {
   position: absolute;
@@ -46,7 +89,7 @@ body {
   box-shadow: 0 0 10px rgba(37, 30, 30, 0.2);
   display: grid;
   grid-template-columns: 1fr 5fr;
-  grid-gap: 20px;
+  grid-gap: 1px;
 }
 
 .nav-bar {
